force-app/main/default/objects/Subscription_Role__c/Subscription_Role__c.object-meta.xml
<CustomObject>
    <label>Subscription Role</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>SFID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>