force-app/main/default/objects/Subscription_Role__c/fields/PrismSubRoleID__c.field-meta.xml
<CustomField>
    <fullName>PrismSubRoleID__c</fullName>
    <label>PrismSubRoleID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>