force-app/main/default/objects/Subscription_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Role_Group__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Access Showings</fullName>
            </value>
            <value>
                <fullName>Active Agent Column Filter</fullName>
            </value>
            <value>
                <fullName>Active and Pending Only</fullName>
            </value>
            <value>
                <fullName>Active No Contract</fullName>
            </value>
            <value>
                <fullName>Affiliate Vendor</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Agent Column Filter</fullName>
            </value>
            <value>
                <fullName>Agent Private Info</fullName>
            </value>
            <value>
                <fullName>Agent Tool V2</fullName>
            </value>
            <value>
                <fullName>AllowSaveWithNoValidation</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Applied Video</fullName>
            </value>
            <value>
                <fullName>Appraiser/Non-shareholder</fullName>
            </value>
            <value>
                <fullName>Appraiser/Shareholder</fullName>
            </value>
            <value>
                <fullName>Assoc Staff</fullName>
            </value>
            <value>
                <fullName>BAAG_BETA_1</fullName>
            </value>
            <value>
                <fullName>BAAG_BETA_2</fullName>
            </value>
            <value>
                <fullName>BAAG_PREMIUM_PRODUCT_TIER_1</fullName>
            </value>
            <value>
                <fullName>BALTIMORE SUN</fullName>
            </value>
            <value>
                <fullName>Baltimore Sun - Newspaper Advertising</fullName>
            </value>
            <value>
                <fullName>BALTIMORE SUNv2</fullName>
            </value>
            <value>
                <fullName>Base Restrictionsv2</fullName>
            </value>
            <value>
                <fullName>Broker_On Common Ground</fullName>
            </value>
            <value>
                <fullName>Broker Backofficev2</fullName>
            </value>
            <value>
                <fullName>Broker Back Officev2</fullName>
            </value>
            <value>
                <fullName>Broker C21 Abrams, Hutchinson Assoc</fullName>
            </value>
            <value>
                <fullName>Broker C21 Alliance</fullName>
            </value>
            <value>
                <fullName>Broker C21 Alliance Email Only</fullName>
            </value>
            <value>
                <fullName>Broker C21 Alliance Marlton</fullName>
            </value>
            <value>
                <fullName>Broker C21 Alliance WC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>