force-app/main/default/objects/Subscription_Role__c/fields/Role_Group__c.field-meta.xml
<CustomField>
    <fullName>Role_Group__c</fullName>
    <label>Role Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>MLS</fullName>
            </value>
            <value>
                <fullName>Employee Roles</fullName>
            </value>
            <value>
                <fullName>StatS</fullName>
            </value>
            <value>
                <fullName>CAT</fullName>
            </value>
            <value>
                <fullName>QC</fullName>
            </value>
            <value>
                <fullName>RETSMDS</fullName>
            </value>
            <value>
                <fullName>RETS Custom</fullName>
            </value>
            <value>
                <fullName>TREND</fullName>
            </value>
            <value>
                <fullName>CARETS</fullName>
            </value>
            <value>
                <fullName>WIREX</fullName>
            </value>
            <value>
                <fullName>REIN</fullName>
            </value>
            <value>
                <fullName>RLMS</fullName>
            </value>
            <value>
                <fullName>MIREX</fullName>
            </value>
            <value>
                <fullName>Status</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>User Roles</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Exclusions</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Conditional</fullName>
            </value>
            <value>
                <fullName>JoeB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>