force-app/main/default/objects/Subscription_Role__c/fields/Role_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Role_Start_Date__c</fullName>
    <label>Role Start Date</label>
    <type>Date</type>
</CustomField>