force-app/main/default/objects/Subscription_Role__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>Subscription Roles</relationshipLabel>
    <relationshipName>Subscription_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>